--- a/about.html
+++ b/about.html
@@ -13,38 +13,39 @@
 <body>
     <main>
         <nav>
-			<a href="index.html">LUKAS J. VASADI</a>
+			<a href="index.html" class="code">lukasvasadi</a>
 			<div id="hidden-links">
 				<a href="about.html">About</a>
-				<a href="blog.html">Blog</a>
+				<a href="blog.html">Linux</a>
+				<a href="blog.html">Arduino</a>
+				
 			</div>
 			<!-- Hamburger menu -->
-			<a href="javascript:void(0);" class="icon" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
+			<a href="javascript:void(0);" class="icon" id="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
 		</nav>
-    
-        <section class="aboutme">
-            <div class="grid">
-                <div>
-                    <img src="images/london.jpg" alt="">
-                </div>
-                <div class="text-container">
-                    <h3>My name is Lukas</h3>
-                    <p>
-                        I grew up in a relatively small town outside of New York. After college,
-                        I moved out to the UK for graduate school, whre I took the opportunity to
-                        explore Cambridgeshire, London, parts of Scotland and Wales, and even jumped 
-                        across to Ireland. One time, my friend and I decided to cycle from Canterbury 
-                        to the Black Forest in Germany, cutting through France, Belgium, and Luxembourg 
-                        in the process. In this blog, I hope to share stories of the interesting places 
-                        and people I've met along the way.
-                    </p>
-                </div>
-            </div>
-        </section>
+		<div class="pop-up" id="mobile-dropdown">
+			<a href="about.html">About</a>
+			<a href="blog.html">Linux</a>
+			<a href="blog.html">Arduino</a>
+			<a href="" class="icon"><i class="fa fa-envelope"></i></a>
+		</div>
+		<div id="landing">
+			<div>
+				<img class="banner" src="images/electronics_generic.jpg" alt="">
+			</div>
+			<div id="landing-msg">
+				<h1 class="code">renaissance engineering</h1>
+				<p>
+                    Often, we treat hardware and software as separate entities. This site
+                    hopes to inspire individuals to approach engineering projects with a Renaissance
+                    mindset: to blend hardware, software, and art in product development.
+                </p>
+			</div>
+		</div>
     </main>
 
     <footer>
-        <p>Copyright &copy; 2020 Lukas Vasadi</p>
+        <p>Copyright &copy; 2021 Lukas Vasadi</p>
     </footer>
 
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
