corrected image resolutions and added code block style

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Renaissance Engineering</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -28,19 +28,9 @@
 			<a href="coming-soon.html">Arduino</a>
 			<a href="" class="icon"><i class="fa fa-envelope"></i></a>
 		</div>
-		<div id="landing">
-			<div>
-				<img class="banner" src="images/electronics_generic_1000x667.jpg" alt="">
-			</div>
-			<div id="landing-msg">
-				<h1 class="code">renaissance engineering</h1>
-				<p>
-                    Often, we treat hardware and software as separate entities. This site
-                    hopes to inspire individuals to approach engineering projects with a Renaissance
-                    mindset: to blend hardware, software, and art in product development.
-                </p>
-			</div>
-		</div>
+        <div class="center-page">
+            <h1 class="code">Coming soon <i class="far fa-grin-tongue-squint"></i></h1>
+        </div>
     </main>
 
     <footer>
