restructured code presentation and page navigation

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -11,25 +11,25 @@
 </head>
 
 <body>
-    <main>
-        <nav>
-			<a href="index.html" class="code">lukasvasadi</a>
-			<div id="hidden-links">
-				<a href="about.html">About</a>
-				<a href="linux_cli.html">Linux</a>
-				<a href="coming-soon.html">Arduino</a>
-			</div>
-			<!-- Hamburger menu -->
-			<a href="javascript:void(0);" class="icon" id="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
-		</nav>
-		<div class="pop-up" id="mobile-dropdown">
+	<nav>
+		<a href="index.html" class="code">lukasvasadi</a>
+		<div id="desktop-menu">
 			<a href="about.html">About</a>
 			<a href="linux_cli.html">Linux</a>
 			<a href="coming-soon.html">Arduino</a>
-			<a href="" class="icon"><i class="fa fa-envelope"></i></a>
+			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
+		<a href="javascript:void(0);" class="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
+	</nav>
+	<div id="mobile-menu">
+		<a href="about.html">About</a>
+		<a href="linux_cli.html">Linux</a>
+		<a href="coming-soon.html">Arduino</a>
+		<a href="mailto:lukas.vasadi@gmail.com" class="icon"><i class="fa fa-envelope"></i></a>
+	</div>
+    <main> 
         <div class="center-page">
-            <h1 class="code">Coming soon <i class="far fa-grin-tongue-squint"></i></h1>
+            <h1 class="code-text">Coming soon <i class="far fa-grin-tongue-squint"></i></h1>
         </div>
     </main>
 
