--- a/about.html
+++ b/about.html
@@ -11,29 +11,30 @@
 </head>
 
 <body>
-    <main>
-        <nav>
-			<a href="index.html" class="code">lukasvasadi</a>
-			<div id="hidden-links">
-				<a href="about.html">About</a>
-				<a href="linux_cli.html">Linux</a>
-				<a href="coming-soon.html">Arduino</a>
-			</div>
-			<!-- Hamburger menu -->
-			<a href="javascript:void(0);" class="icon" id="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
-		</nav>
-		<div class="pop-up" id="mobile-dropdown">
-			<a href="about.html">About</a>
-			<a href="linux_cli.html">Linux</a>
-			<a href="coming-soon.html">Arduino</a>
-			<a href="" class="icon"><i class="fa fa-envelope"></i></a>
-		</div>
+    <nav>
+        <a href="index.html" class="code">lukasvasadi</a>
+        <div id="desktop-menu">
+            <a href="about.html">About</a>
+            <a href="linux_cli.html">Linux</a>
+            <a href="coming-soon.html">Arduino</a>
+            <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
+        </div>
+        <!-- Hamburger menu -->
+        <a href="javascript:void(0);" class="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
+    </nav>
+    <div id="mobile-menu">
+        <a href="about.html">About</a>
+        <a href="linux_cli.html">Linux</a>
+        <a href="coming-soon.html">Arduino</a>
+        <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
+    </div>
+    <main> 
 		<div id="landing">
 			<div>
 				<img class="banner" src="images/electronics_generic_1000x667.jpg" alt="">
 			</div>
 			<div id="landing-msg">
-				<h1 class="code">renaissance engineering</h1>
+				<h1 class="code-text">renaissance engineering</h1>
 				<p>
                     Often, we treat hardware and software as separate entities. This site
                     hopes to inspire individuals to approach engineering projects with a Renaissance
