--- a/coming-soon.html
+++ b/coming-soon.html
@@ -12,7 +12,7 @@
 
 <body>
 	<nav>
-		<a href="index.html" class="code">lukasvasadi</a>
+		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
 			<a href="linux_cli.html">Linux</a>
