--- a/coming-soon.html
+++ b/coming-soon.html
@@ -15,16 +15,14 @@
 		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
-			<a href="linux_cli.html">Linux</a>
-			<a href="coming-soon.html">Arduino</a>
+			<a href="cheatsheet-gallery.html">Cheatsheets</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<a href="javascript:void(0);" class="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
 	</nav>
 	<div id="mobile-menu">
 		<a href="about.html">About</a>
-		<a href="linux_cli.html">Linux</a>
-		<a href="coming-soon.html">Arduino</a>
+		<a href="cheatsheet-gallery.html">Cheatsheets</a>
 		<a href="mailto:lukas.vasadi@gmail.com" class="icon"><i class="fa fa-envelope"></i></a>
 	</div>
     <main> 
