--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
-			<a href="linux_cli.html".html">Linux</a>
-			<a href="coming-soon.html">Arduino</a>
+			<a href="cheatsheet-gallery.html".html">Cheatsheets</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<!-- Hamburger menu -->
@@ -25,8 +24,7 @@
 	</nav>
 	<div id="mobile-menu">
 		<a href="about.html">About</a>
-		<a href="linux_cli.html">Linux</a>
-		<a href="coming-soon.html">Arduino</a>
+		<a href="cheatsheet-gallery.html">Cheatsheets</a>
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
@@ -42,8 +40,8 @@
 		<section class="featured">
 			<div class="grid">
 				<div class="thumbnail-container">
-					<h2><a href="linux_cli.html">Command Line Interface</a></h2>
-					<a href="linux_cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+					<h2><a href="linux-cli.html">Linux Command Line</a></h2>
+					<a href="linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Linux thrives on the command line. Learn to become a superuser.
@@ -51,7 +49,7 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="coming-soon.html">Basic Git Commands</a></h2>
+					<h2><a href="coming-soon.html">Git</a></h2>
 					<a href="coming-soon.html"><img src="images/git_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
