--- a/about.html
+++ b/about.html
@@ -15,8 +15,7 @@
         <a href="index.html" class="code-text">lukasvasadi</a>
         <div id="desktop-menu">
             <a href="about.html">About</a>
-            <a href="linux_cli.html">Linux</a>
-            <a href="coming-soon.html">Arduino</a>
+            <a href="cheatsheet-gallery.html">Cheatsheets</a>
             <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
         <!-- Hamburger menu -->
@@ -24,8 +23,7 @@
     </nav>
     <div id="mobile-menu">
         <a href="about.html">About</a>
-        <a href="linux_cli.html">Linux</a>
-        <a href="coming-soon.html">Arduino</a>
+        <a href="cheatsheet-gallery.html">Cheatsheets</a>
         <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
     <main> 
