--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
-			<a href="cheatsheet-gallery.html".html">Cheatsheets</a>
+			<a href="gallery.html".html">Gallery</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<!-- Hamburger menu -->
@@ -24,7 +24,7 @@
 	</nav>
 	<div id="mobile-menu">
 		<a href="about.html">About</a>
-		<a href="cheatsheet-gallery.html">Cheatsheets</a>
+		<a href="gallery.html">Gallery</a>
 		<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 	</div>
 	<main>
@@ -40,8 +40,8 @@
 		<section class="featured">
 			<div class="grid">
 				<div class="thumbnail-container">
-					<h2><a href="linux-cli.html">Linux Command Line</a></h2>
-					<a href="linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+					<h2><a href="posts/linux-cli.html">Linux Command Line</a></h2>
+					<a href="posts/linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Linux thrives on the command line. Learn to become a superuser.
@@ -49,8 +49,8 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="coming-soon.html">Git</a></h2>
-					<a href="coming-soon.html"><img src="images/git_500x331.jpg" alt=""></a>
+					<h2><a href="posts/coming-soon.html">Git</a></h2>
+					<a href="posts/coming-soon.html"><img src="images/git_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Git is one of the most useful tools for a software engineer. This reference covers some of the 
@@ -59,8 +59,8 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="coming-soon.html">Raspberry Pi 4</a></h2>
-					<a href="coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+					<h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
+					<a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							One of the best learning instruments for computer engineering, the Raspberry Pi can accelerate 
