--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <a href="index.html" class="code-text">lukasvasadi</a>
         <div id="desktop-menu">
             <a href="about.html">About</a>
-            <a href="cheatsheet-gallery.html">Cheatsheets</a>
+            <a href="gallery.html">Gallery</a>
             <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
         <!-- Hamburger menu -->
@@ -23,7 +23,7 @@
     </nav>
     <div id="mobile-menu">
         <a href="about.html">About</a>
-        <a href="cheatsheet-gallery.html">Cheatsheets</a>
+        <a href="gallery.html">Gallery</a>
         <a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
     </div>
     <main> 
@@ -32,11 +32,11 @@
 				<img class="banner" src="images/electronics_generic_1000x667.jpg" alt="">
 			</div>
 			<div id="landing-msg">
-				<h1 class="code-text">renaissance engineering</h1>
+				<h1 class="code-text">product-focused engineering</h1>
 				<p>
                     Often, we treat hardware and software as separate entities. This site
-                    hopes to inspire individuals to approach engineering projects with a Renaissance
-                    mindset: to blend hardware, software, and art in product development.
+                    hopes to inspire individuals to blend hardware, software, and art in
+                    focused product development.
                 </p>
 			</div>
 		</div>
