minor style upgrades and content

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 				<h1 class="code-text">product-focused engineering</h1>
 				<p>
                     Often, we treat hardware and software as separate entities. This site
-                    hopes to inspire individuals to blend hardware, software, and art in
+                    hopes to inspire the blending of hardware, software, and art in
                     focused product development.
                 </p>
 			</div>
