--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
 	</div>
 	<main>
         <h1 class="center extra-padding">Explore by topic</h1>
-        <div class="grid">
+        <div class="grid gallery">
             <div class="thumbnail-container">
                 <h2><a href="posts/linux-cli.html">Linux Command Line</a></h2>
                 <a href="posts/linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
