--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<section class="featured">
-			<div class="grid">
+			<div class="grid gallery">
 				<div class="thumbnail-container">
 					<h2><a href="posts/linux-cli.html">Linux Command Line</a></h2>
 					<a href="posts/linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
