--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
         <h1 class="center extra-padding">Explore by topic</h1>
         <div class="grid gallery">
             <div class="thumbnail-container">
-                <h2><a href="posts/linux-cli.html">Linux Command Line</a></h2>
-                <a href="posts/linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+                <h2><a href="posts/linux.html">Linux Command Line</a></h2>
+                <a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Linux thrives on the command line. Learn to become a superuser.
@@ -49,8 +49,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="posts/coming-soon.html">Git</a></h2>
-                <a href="posts/coming-soon.html"><img src="images/git_500x331.jpg" alt=""></a>
+                <h2><a href="posts/git.html">Git</a></h2>
+                <a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Git is one of the most useful tools for a software engineer. This reference covers some of the 
