--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<section class="featured">
 			<div class="grid gallery">
 				<div class="thumbnail-container">
-					<h2><a href="posts/linux-cli.html">Linux Command Line</a></h2>
-					<a href="posts/linux-cli.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+					<h2><a href="posts/linux.html">Linux Command Line</a></h2>
+					<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Linux thrives on the command line. Learn to become a superuser.
@@ -49,22 +49,21 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="posts/coming-soon.html">Git</a></h2>
-					<a href="posts/coming-soon.html"><img src="images/git_500x331.jpg" alt=""></a>
+					<h2><a href="posts/powershell.html">PowerShell</a></h2>
+					<a href="posts/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
-							Git is one of the most useful tools for a software engineer. This reference covers some of the 
-							standard commands for managing any repository.
+							One of the most powerful tools for modern IT administration.
 						</p>
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
-					<a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+					<h2><a href="posts/git.html">Git</a></h2>
+					<a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
-							One of the best learning instruments for computer engineering, the Raspberry Pi can accelerate 
-							your hardware prototyping.
+							Git is one of the most useful tools for a software engineer. This reference covers some of the 
+							standard commands for managing any repository.
 						</p>
 					</div>
 				</div>
