--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<!-- Hamburger menu -->
-		<a href="javascript:void(0);" class="hamburger" onclick="menuFunction()"><i class="fa fa-bars"></i></a>
+		<a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
 	</nav>
 	<div id="mobile-menu">
 		<a href="about.html">About</a>
