--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +7,8 @@
 	<title>Lukas Vasadi</title>
 	<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="styles/styles.css" />
 </head>
-
 <body>
 	<nav>
 		<a href="index.html" class="code-text">lukasvasadi</a>
@@ -19,7 +17,6 @@
 			<a href="gallery.html".html">Gallery</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
-		<!-- Hamburger menu -->
 		<a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
 	</nav>
 	<div id="mobile-menu">
@@ -31,8 +28,8 @@
         <h1 class="center extra-padding">Explore by topic</h1>
         <div class="grid gallery">
             <div class="thumbnail-container">
-                <h2><a href="posts/linux.html">Linux Command Line</a></h2>
-                <a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+                <h2><a href="media/linux.html">Linux Command Line</a></h2>
+                <a href="media/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Linux thrives on the command line. Learn to become a superuser.
@@ -40,8 +37,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="posts/powershell.html">PowerShell</a></h2>
-                <a href="posts/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
+                <h2><a href="media/powershell.html">PowerShell</a></h2>
+                <a href="media/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         One of the most powerful tools for modern IT administration.
@@ -49,8 +46,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="posts/git.html">Git</a></h2>
-                <a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
+                <h2><a href="media/git.html">Git</a></h2>
+                <a href="media/git.html"><img src="images/git_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Git is one of the most useful tools for a software engineer. This reference covers some of the 
@@ -59,8 +56,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
-                <a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+                <h2><a href="media/coming-soon.html">Raspberry Pi 4</a></h2>
+                <a href="media/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         One of the best learning instruments for computer engineering, the Raspberry Pi can accelerate 
@@ -70,13 +67,9 @@
             </div>
         </div>
 	</main>
-
 	<footer>
 		<p>Copyright &copy; 2021 Lukas Vasadi</p>
 	</footer>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
-
 </html>
