content linux plus styling updates

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 			<div id="landing-msg">
 				<h1 class="code-text">product-focused engineering</h1>
 				<p>
-                    Too often, we treat hardware and software as separate entities. This site promotes the blending of hardware, 
+                    Too often we treat hardware and software as separate entities. This site promotes the blending of hardware, 
                     software, and art in focused product development.
                 </p>
 			</div>
@@ -40,6 +40,6 @@
     <footer>
         <p>Copyright &copy; 2021 Lukas Vasadi</p>
     </footer>
-	<script src="js/main.js"></script>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
