--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<section class="featured">
 			<div class="grid gallery">
 				<div class="thumbnail-container">
-					<h2><a href="media/linux.html">Linux Command Line</a></h2>
-					<a href="media/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+					<h2><a href="posts/linux.html">Linux Command Line</a></h2>
+					<a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Linux thrives on the command line. Learn to become a superuser.
@@ -46,8 +46,8 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="media/powershell.html">PowerShell</a></h2>
-					<a href="media/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
+					<h2><a href="posts/powershell.html">PowerShell</a></h2>
+					<a href="posts/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							One of the most powerful tools for modern IT administration.
@@ -55,8 +55,8 @@
 					</div>
 				</div>
 				<div class="thumbnail-container">
-					<h2><a href="media/git.html">Git</a></h2>
-					<a href="media/git.html"><img src="images/git_500x331.jpg" alt=""></a>
+					<h2><a href="posts/git.html">Git</a></h2>
+					<a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
 					<div class="thumbnail-container-text">
 						<p>
 							Git is one of the most useful tools for a software engineer. This reference covers some of the 
