--- a/gallery.html
+++ b/gallery.html
@@ -28,8 +28,8 @@
         <h1 class="center extra-padding">Explore by topic</h1>
         <div class="grid gallery">
             <div class="thumbnail-container">
-                <h2><a href="media/linux.html">Linux Command Line</a></h2>
-                <a href="media/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
+                <h2><a href="posts/linux.html">Linux Command Line</a></h2>
+                <a href="posts/linux.html"><img src="images/ubuntu_cli_sudo_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Linux thrives on the command line. Learn to become a superuser.
@@ -37,8 +37,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="media/powershell.html">PowerShell</a></h2>
-                <a href="media/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
+                <h2><a href="posts/powershell.html">PowerShell</a></h2>
+                <a href="posts/powershell.html"><img src="images/powershell_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         One of the most powerful tools for modern IT administration.
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="media/git.html">Git</a></h2>
-                <a href="media/git.html"><img src="images/git_500x331.jpg" alt=""></a>
+                <h2><a href="posts/git.html">Git</a></h2>
+                <a href="posts/git.html"><img src="images/git_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         Git is one of the most useful tools for a software engineer. This reference covers some of the 
@@ -56,8 +56,8 @@
                 </div>
             </div>
             <div class="thumbnail-container">
-                <h2><a href="media/coming-soon.html">Raspberry Pi 4</a></h2>
-                <a href="media/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+                <h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
+                <a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
                 <div class="thumbnail-container-text">
                     <p>
                         One of the best learning instruments for computer engineering, the Raspberry Pi can accelerate 
@@ -70,6 +70,6 @@
 	<footer>
 		<p>Copyright &copy; 2021 Lukas Vasadi</p>
 	</footer>
-	<script src="js/main.js"></script>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
