added general website description and tag image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta property="og:title" content="Lukas Vasadi"/>
+	<meta property="og:description" content="Documenting hardware and software skills for product development."/>
+	<meta property="og:image" content="https://lukasvasadi.github.io/images/programming_1000x800.jpg">
 	<title>Lukas Vasadi</title>
 	<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
