--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<a href="index.html" class="code-text">lukasvasadi</a>
 		<div id="desktop-menu">
 			<a href="about.html">About</a>
-			<a href="gallery.html".html">Gallery</a>
+			<a href="gallery.html">Gallery</a>
 			<a href="mailto:lukas.vasadi@gmail.com"><i class="fa fa-envelope"></i></a>
 		</div>
 		<a href="javascript:void(0);" class="hamburger" onclick="menuDropdown()"><i class="fa fa-bars"></i></a>
