--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
 						</p>
 					</div>
 				</div>
+				<div class="thumbnail-container">
+					<h2><a href="posts/coming-soon.html">Raspberry Pi 4</a></h2>
+					<a href="posts/coming-soon.html"><img src="images/raspi_500x331.jpg" alt=""></a>
+					<div class="thumbnail-container-text">
+						<p>
+							One of the best learning instruments for computer engineering, the Raspberry Pi can accelerate 
+							your hardware prototyping.
+						</p>
+					</div>
+				</div>
             </div>
 		</section>
 	</main>
